refactor(build): replace spring-boot-maven plugin for building query-service, as it breaks protobuf generation
We're using Wire (https://github.com/square/wire) for protobuf generation.
At runtime, this uses okio (https://github.com/square/okio) generate artifacts in order to generate a profobuf schema - and it treats
the current classpath as a zip.  This is reasonable, because normally the jar is a valid zip.
However, spring boot rewires this to make an executable, fat jar.  That breaks okio, and therefore wire.

Ideally, there'd be a workaround, but I haven't found one.
See discussions here:
https://github.com/square/okio/issues/1094
https://github.com/square/wire/discussions/2209

So, we're reverting to a classic jar build using maven appassembler

--- a/vyne-query-service/Dockerfile
+++ b/vyne-query-service/Dockerfile
@@ -1,7 +1,18 @@
 FROM eclipse-temurin:11.0.13_8-jre-focal
 
-COPY target/vyne-query-service.jar /opt/service/
+RUN addgroup --system worker --gid 1000 && \
+    adduser --system worker --ingroup worker --uid 1001
+
+RUN mkdir -p /opt/service
+RUN chown worker:worker /opt/service/
+RUN apt-get update && apt-get install zip -y
+
+USER worker
+WORKDIR /opt/service/
+
+COPY --chown=worker target/vyne.zip /opt/service/
+RUN cd /opt/service && unzip vyne.zip
 
 WORKDIR /opt/service/
 
-CMD $BEFORE_START_COMMAND && java $JVM_OPTS -jar -Dspring.profiles.active=${PROFILE} vyne-query-service.jar $OPTIONS
+CMD $BEFORE_START_COMMAND && vyne/bin/vyne  -Dspring.profiles.active=${PROFILE} $OPTIONS
