--- a/vyne-query-service/pom.xml
+++ b/vyne-query-service/pom.xml
@@ -12,6 +12,10 @@
 
    <properties>
       <buildNumber>0</buildNumber>
+      <app.main.class>io.vyne.queryService.QueryServiceApp</app.main.class>
+      <app.distribution.directory>${project.build.directory}/distributions/app</app.distribution.directory>
+      <!-- see the plugin below for why we're disabling this -->
+      <spring-boot.repackage.skip>true</spring-boot.repackage.skip>
    </properties>
 
    <dependencies>
@@ -379,6 +383,29 @@
             <artifactId>spring-boot-maven-plugin</artifactId>
             <executions>
                <execution>
+                  <id>repackage</id>
+                  <!-- We can't use a spring boot repackaged fat jar.
+               We're using Wire (https://github.com/square/wire) for protobuf generation.
+    At runtime, this uses okio (https://github.com/square/okio) generate artifacts in order to generate a protobuf schema - and it treats
+    the current classpath as a zip.  This is reasonable, because normally the jar is a valid zip.
+    However, spring boot rewires this to make an executable, fat jar.  That breaks okio, and therefore wire.
+
+    Ideally, there'd be a workaround, but I haven't found one.
+    See discussions here:
+    https://github.com/square/okio/issues/1094
+    https://github.com/square/wire/discussions/2209
+
+    So, we're reverting to a classic jar build using maven appassembler
+
+                -->
+                  <goals>
+                     <goal>repackage</goal>
+                  </goals>
+                  <configuration>
+                    <skip>true</skip>
+                  </configuration>
+               </execution>
+               <execution>
                   <goals>
                      <goal>build-info</goal>
                   </goals>
@@ -395,6 +422,51 @@
                   </buildNumber>
                </additionalProperties>
             </configuration>
+         </plugin>
+         <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>appassembler-maven-plugin</artifactId>
+            <version>1.10</version>
+            <executions>
+               <execution>
+                  <id>assemble-script</id>
+                  <phase>package</phase>
+                  <goals>
+                     <goal>assemble</goal>
+                  </goals>
+                  <configuration>
+                     <showConsoleWindow>true</showConsoleWindow>
+                     <programs>
+                        <program>
+                           <mainClass>${app.main.class}</mainClass>
+                           <id>vyne</id>
+                        </program>
+                     </programs>
+                     <repositoryLayout>flat</repositoryLayout>
+                     <repositoryName>lib</repositoryName>
+                  </configuration>
+               </execution>
+            </executions>
+         </plugin>
+         <plugin>
+            <artifactId>maven-assembly-plugin</artifactId>
+            <version>3.3.0</version>
+            <configuration>
+               <descriptors>
+                  <descriptor>src/main/assembly/assembly.xml</descriptor>
+               </descriptors>
+               <appendAssemblyId>false</appendAssemblyId>
+               <finalName>vyne</finalName>
+            </configuration>
+            <executions>
+               <execution>
+                  <id>make-assembly</id> <!-- this is used for inheritance merges -->
+                  <phase>package</phase> <!-- bind to the packaging phase -->
+                  <goals>
+                     <goal>single</goal>
+                  </goals>
+               </execution>
+            </executions>
          </plugin>
          <plugin>
             <groupId>com.github.eirslett</groupId>
