--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,8 +26,9 @@ build-jvm:
    stage: build
    except:
       - tags
-      - develop
-      - master
+#      Don't run this build on develop/master - use the consolidated maven+docker builds instead
+#      - develop
+#      - master
    cache:
       paths:
          - .m2/repository
@@ -39,18 +40,19 @@ build-jvm:
       - 'mvn $MAVEN_CLI_OPTS -version'
       - 'mvn $MAVEN_CLI_OPTS clean install'
    artifacts:
-      paths:
-         - "cask/target/cask.jar"
-         - "eureka/target/eureka.jar"
-         - "jwt-auth-server/target/jwt-auth-server.jar"
-         - "pipelines/pipeline-jet/target/pipeline-jet.jar"
-         - "pipelines/pipeline-runner-app/target/pipeline-runner-app.jar"
-         - "pipelines/pipelines-orchestrator/target/pipelines-orchestrator.jar"
-         - "schema-server/target/schema-server.jar"
-         - "vyne-analytics-server/target/vyne-analytics-server.jar"
-         - "vyne-query-service/target/vyne.zip"
-         - "test-cli/target/*.zip"
-      expire_in: 1 hours
+#      Disabled artifacts on branch builds, as we've exceeded our quota.
+#      paths:
+#         - "cask/target/cask.jar"
+#         - "eureka/target/eureka.jar"
+#         - "jwt-auth-server/target/jwt-auth-server.jar"
+#         - "pipelines/pipeline-jet/target/pipeline-jet.jar"
+#         - "pipelines/pipeline-runner-app/target/pipeline-runner-app.jar"
+#         - "pipelines/pipelines-orchestrator/target/pipelines-orchestrator.jar"
+#         - "schema-server/target/schema-server.jar"
+#         - "vyne-analytics-server/target/vyne-analytics-server.jar"
+#         - "vyne-query-service/target/vyne.zip"
+#         - "test-cli/target/*.zip"
+#      expire_in: 1 hours
       reports:
          junit:
             # Note:This won't actually work, b/c of https://gitlab.com/gitlab-org/gitlab-runner/issues/2620
