Azure blob store & calcite

--- a/connectors/aws-connectors/pom.xml
+++ b/connectors/aws-connectors/pom.xml
@@ -15,9 +15,6 @@
       <module>sqs-connector</module>
       <module>aws-core</module>
       <module>s3-connector</module>
+       <module>lambda-connector</module>
    </modules>
-
-
-
-
 </project>
