--- a/vyne-query-service/pom.xml
+++ b/vyne-query-service/pom.xml
@@ -10,7 +10,7 @@
 
    <artifactId>vyne-query-service</artifactId>
 
-   <properties>   
+   <properties>
       <buildNumber>0</buildNumber>
       <app.main.class>io.vyne.queryService.QueryServiceApp</app.main.class>
       <app.distribution.directory>${project.build.directory}/distributions/app</app.distribution.directory>
@@ -75,7 +75,17 @@
       </dependency>
       <dependency>
          <groupId>io.vyne</groupId>
+         <artifactId>blob-connector</artifactId>
+         <version>${project.version}</version>
+      </dependency>
+      <dependency>
+         <groupId>io.vyne</groupId>
          <artifactId>sqs-connector</artifactId>
+         <version>${project.version}</version>
+      </dependency>
+      <dependency>
+         <artifactId>lambda-connector</artifactId>
+         <groupId>io.vyne</groupId>
          <version>${project.version}</version>
       </dependency>
       <dependency>
