committing everything from talk

--- a/schema-server/sample-configs/sandbox.conf
+++ b/schema-server/sample-configs/sandbox.conf
@@ -4,6 +4,7 @@ file {
    apiEditorProjectPath: ${user.home}/dev/vyne-sandbox/schema-writer-test
    paths=[
       ${user.home}/dev/vyne-sandbox/schema-writer-test
+      /home/martypitt/dev/vyne-demos/rewards/flat-files
    ]
 }
 
