--- a/schema-management/schema-spring/pom.xml
+++ b/schema-management/schema-spring/pom.xml
@@ -26,6 +26,11 @@
          <version>0.20.0-SNAPSHOT</version>
       </dependency>
       <dependency>
+         <groupId>org.taxilang</groupId>
+         <artifactId>protobuf-to-taxi</artifactId>
+         <version>${taxi.version}</version>
+      </dependency>
+      <dependency>
          <groupId>io.vyne</groupId>
          <artifactId>schema-rsocket-publisher</artifactId>
          <version>0.20.0-SNAPSHOT</version>
