feat(start.vyne.co): set content type header

--- a/start/netlify.toml
+++ b/start/netlify.toml
@@ -3,3 +3,4 @@
   to = "/docker-compose.yml"
   status = 200
   force = false
+  headers = { content-disposition = "inline", content-type = "text/plain; charset=utf-8" }
