feat(start.vyne.co): set content type header

--- a/start/netlify.toml
+++ b/start/netlify.toml
@@ -4,3 +4,8 @@
   status = 200
   force = false
   headers = { content-disposition = "inline", content-type = "text/plain; charset=utf-8" }
+
+[[headers]]
+  for = "/"
+  [headers.values]
+    content-disposition = 'inline'
