--- a/utils/pom.xml
+++ b/utils/pom.xml
@@ -26,6 +26,12 @@
          <artifactId>arrow-core</artifactId>
          <version>${arrow.version}</version>
       </dependency>
+
+      <dependency>
+         <groupId>com.aventrix.jnanoid</groupId>
+         <artifactId>jnanoid</artifactId>
+         <version>2.0.0</version>
+      </dependency>
    </dependencies>
 
 </project>
