--- a/connectors/connectors-core/pom.xml
+++ b/connectors/connectors-core/pom.xml
@@ -18,6 +18,11 @@
 
    <dependencies>
       <dependency>
+         <groupId>org.springframework.boot</groupId>
+         <artifactId>spring-boot</artifactId>
+         <scope>provided</scope>
+      </dependency>
+      <dependency>
          <groupId>io.vyne</groupId>
          <artifactId>vyne-core-types</artifactId>
          <version>${project.version}</version>
