refactor(conversion): move converter services out of core-types to remove dependency on spring

--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,7 @@
       <module>protobuf-utils</module>
       <module>licensing</module>
       <module>vyne-spring-http-client</module>
+       <module>datatype-converters</module>
    </modules>
 
    <scm>
