--- a/schema-management/schema-rsocket-publisher/pom.xml
+++ b/schema-management/schema-rsocket-publisher/pom.xml
@@ -31,5 +31,19 @@
          <artifactId>reactor-test</artifactId>
          <scope>test</scope>
       </dependency>
+      <dependency>
+         <groupId>io.projectreactor.kotlin</groupId>
+         <artifactId>reactor-kotlin-extensions</artifactId>
+      </dependency>
+      <dependency>
+         <groupId>org.springframework.boot</groupId>
+         <artifactId>spring-boot-starter-rsocket</artifactId>
+         <scope>test</scope>
+      </dependency>
+      <dependency>
+         <groupId>org.springframework</groupId>
+         <artifactId>spring-messaging</artifactId>
+         <scope>test</scope>
+      </dependency>
    </dependencies>
 </project>
