small pipeline fixes and a new esg test

--- a/.gitignore
+++ b/.gitignore
@@ -191,3 +191,4 @@ regression-tests/terraform/.terraform/
 schema-server/.*_pid*
 **/terraform.tfstate
 /regression-tests/terraform/terraform.tfstate
+/pipelines/pipeline-*.json
