--- a/schema-management/schema-spring/pom.xml
+++ b/schema-management/schema-spring/pom.xml
@@ -21,6 +21,11 @@
          <artifactId>java2taxi</artifactId>
       </dependency>
       <dependency>
+         <groupId>io.projectreactor</groupId>
+         <artifactId>reactor-test</artifactId>
+         <scope>test</scope>
+      </dependency>
+      <dependency>
          <groupId>org.taxilang</groupId>
          <artifactId>java-spring-taxi</artifactId>
          <version>${taxi.version}</version>
