--- a/.editorconfig
+++ b/.editorconfig
@@ -22,3 +22,9 @@ trim_trailing_whitespace = false
 [{package,bower}.json]
 indent_style = space
 indent_size = 2
+
+[*.ts]
+ij_typescript_spaces_within_object_literal_braces = true
+ij_typescript_spaces_within_imports = true
+ij_typescript_force_quote_style = true
+ij_typescript_use_double_quotes = false
