chore(build): produce multi-platform docker images, supporting ARM64 and AMD. Enables support for M1-Max macbook pros.
This moves our docker builds out of maven, and back into gitlab ci script, as the maven plugin we were using does not support building with `docker buildx`.

* Removed cask-nodb docker image, and made the default cask image ship without a db

--- a/.gitignore
+++ b/.gitignore
@@ -192,3 +192,6 @@ schema-server/.*_pid*
 **/terraform.tfstate
 /regression-tests/terraform/terraform.tfstate
 /pipelines/pipeline-*.json
+
+
+build-version.txt
