--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -33,7 +33,7 @@ stages:
       - 'if [ -z "${CI_SERVER_HOST}" ]; then echo "var is blank"; else echo "var is set"; fi'
       - 'if [ -z "${CI_PROJECT_PATH}" ]; then echo "var is blank"; else echo "var is set"; fi'
       - 'mvn $MAVEN_CLI_OPTS -version'
-      - 'mvn $MAVEN_CLI_OPTS -DbuildNumber=$CI_BUILD_ID $maven-extra-args clean install'
+      - 'mvn $MAVEN_CLI_OPTS -DbuildNumber=$CI_BUILD_ID $MAVEN_EXTRA_ARGS clean install'
 
       #   Read the POM, grab the version, and set to an env variable
       #   https://stackoverflow.com/a/52241594
@@ -99,7 +99,7 @@ build-jvm-branch:
       - master
    extends: .build-jvm
    variables:
-      maven-extra-args: ''
+      MAVEN_EXTRA_ARGS: ''
 
 build-jvm-develop:
    stage: build
@@ -108,7 +108,7 @@ build-jvm-develop:
    extends: .build-jvm
    variables:
       # We skip tests on develop and master, as the tests have already run on the branch
-      maven-extra-args: "-P snapshot-release -DskipTests"
+      MAVEN_EXTRA_ARGS: "'-P snapshot-release -DskipTests'"
 
 
 build-jvm-master:
@@ -118,7 +118,7 @@ build-jvm-master:
    extends: .build-jvm
    variables:
       # We skip tests on develop and master, as the tests have already run on the branch
-      maven-extra-args: '-P release -DskipTests'
+      MAVEN_EXTRA_ARGS: '-P release -DskipTests'
 
 release-major:
    variables:
