added 0.20 relese notes and docs

--- a/vyne-query-service/src/main/resources/application.yml
+++ b/vyne-query-service/src/main/resources/application.yml
@@ -39,6 +39,11 @@ spring:
       driverClassName: org.h2.Driver
       database-platform: org.hibernate.dialect.H2Dialect
       schema: classpath:schema.sql
+   security:
+      oauth2:
+         resourceserver:
+            jwt:
+               jwk-set-uri: ${vyne.security.open-ipd.jwk-set-uri:''}
 
 #   cloud:
 #      discovery:
