--- a/pom.xml
+++ b/pom.xml
@@ -206,17 +206,6 @@
          <artifactId>h2</artifactId>
          <scope>test</scope>
       </dependency>
-      <dependency>
-         <groupId>org.jetbrains.kotlin</groupId>
-         <artifactId>kotlin-stdlib-jdk8</artifactId>
-         <version>${kotlin.version}</version>
-      </dependency>
-      <dependency>
-         <groupId>org.jetbrains.kotlin</groupId>
-         <artifactId>kotlin-test</artifactId>
-         <version>${kotlin.version}</version>
-         <scope>test</scope>
-      </dependency>
    </dependencies>
 
    <dependencyManagement>
@@ -458,14 +447,14 @@
             <executions>
                <execution>
                   <id>compile</id>
-                  <phase>compile</phase>
+                  <phase>process-sources</phase>
                   <goals>
                      <goal>compile</goal>
                   </goals>
                </execution>
                <execution>
                   <id>test-compile</id>
-                  <phase>test-compile</phase>
+                  <phase>process-test-resources</phase>
                   <goals>
                      <goal>test-compile</goal>
                   </goals>
@@ -479,7 +468,7 @@
                   <plugin>no-arg</plugin>
                   <plugin>kotlinx-serialization</plugin>
                </compilerPlugins>
-               <jvmTarget>1.8</jvmTarget>
+               <jvmTarget>${kotlin.compiler.jvmTarget}</jvmTarget>
             </configuration>
 
             <dependencies>
